test/syntax/05-type_specifier-1-err.c
// ======================================================================

/* type_specifier -> optional_type type MULTIPLY */

// ======================================================================

extern *ip;     // error: no type

void main(void)
{
  static char *cp;

}

// ======================================================================
